dosya yollari duzeltildi

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
             </ul>
         </div>
     </header>
-
+git push -u origin main
     <section id="anasayfa">
         <div class="inner_anasayfa">
             <div class="child_anasayfa">
